bat.bool1.posneg.PosNeg.scala.error
Compilation error:
PosNeg:7: error: ')' expected but '}' found.
} 
^